prep guide white space styling fix

--- a/src/pages/preparation-guide/index.module.css
+++ b/src/pages/preparation-guide/index.module.css
@@ -367,7 +367,7 @@
 
 @media (max-width: 900px) {
   .container {
-    width: 100% !important;
+    width: 100%;
   }
 
   .section {
